--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <li class="content-box">
               <div class="background-icon">
                 <svg class="icon">
-                  <use href="./imeges/sprite.svg#icon-man" viewBox="0 0 32 32">
+                  <use href="./imeges/symbol-defs.svg#icon-man" viewBox="0 0 32 32">
                   </use>
                 </svg>
               </div>
@@ -429,12 +429,79 @@
               </li>
             </ul>
           </div>
-          <div>
-            <div class="footer-header">подпишитесь на рассылку</div>
-            <a href=""class="button-head">подписаться</a>
+          <div>            
+            <form>
+              <div class="footer-header">подпишитесь на рассылку</div>
+              <input type="text" class="footer-input" name="mail-sent" placeholder="E-mail">
+              <a href="" class="button-head">подписаться
+                <svg class="img-sent" width="24" height="24">
+                  <use href="./imeges/symbol-defs.svg#icon-icon-send" viewBox="0 0 32 32">                
+                  </use>
+                </svg>
+              </a> 
+            </form>            
           </div>
         </div>
       </section>
     </footer>
+    <div class="backdrope">
+    <!--class modal-window--> 
+      <div class="modal-window">
+        <button class="button-close">
+          <svg class="img-close" width="18" height="18">
+            <use href="./imeges/spryte2.svg#icon-close-black-18dp-2-1" viewBox="0 0 32 32">
+            </use>">
+          </svg>
+        </button>
+        <h1 class="form-title">Оставте свои данные ,мы вам перезвоним
+        </h1>
+        <div class="form-completed">
+          <label for="name" class="form-lable">имя</label>
+          <input type="text" class="form-input" name="name" id="name">
+          <div class="img-form">
+            <svg class="img-color" width="18" height="18">
+              <use href="./imeges/spryte2.svg#icon-person-black-18dp-1" viewBox="0 0 32 32"></use>
+            </svg>
+          </div>
+        </div>
+
+        <div class="form-completed">
+          <label for="tel" class="form-lable">телефон</label>
+          <input type="tel" class="form-input" name="tel" id="tel">
+          <div class="img-form">
+            <svg class="img-color" width="18" height="18">
+              <use href="./imeges/spryte2.svg#icon-phone-black-18dp-1" viewBox="0 0 32 32"></use>
+            </svg>
+          </div>
+        </div>
+
+        <div class="form-completed">
+          <label for="mail" class="form-lable">почта</label>
+          <input type="mail" class="form-input" name="mail" id="tel">
+          <div class="img-form">
+            <svg class="img-color" width="18" height="18">
+              <use href="./imeges/spryte2.svg#icon-email-black-18dp-1" viewBox="0 0 32 32"></use>
+            </svg>
+          </div>
+        </div>
+
+
+        <div class="form-completed">
+          <label for="comment" class="form-lable">коментарий</label>
+          <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
+        </div>
+
+        <div class="form-allow">
+          <input class="checkbox" type="checkbox" name="allow" id="allow">
+          <lable class="checkbox-lable" for="allow">Соглашаюсь с рассылкой и принимаю
+            <a class="form-link" href="#" target="_blank" rel="noopener noreferrer">Условия договора</a>
+          </lable>
+        </div>
+
+
+      </div>
+
+    </div>
+
   </body>                
 </html>
