--- a/index.html
+++ b/index.html
@@ -497,6 +497,7 @@
             <a class="form-link" href="#" target="_blank" rel="noopener noreferrer">Условия договора</a>
           </lable>
         </div>
+        <button class="button-head">отправить</button>
 
 
       </div>
