--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         <h1 class="form-title">Оставте свои данные ,мы вам перезвоним
         </h1>
         <div class="form-completed">
-          <label for="name" class="form-lable">имя</label>
+          <label for="name" class="form-label">имя</label>
           <input type="text" class="form-input" name="name" id="name">
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
@@ -466,7 +466,7 @@
         </div>
 
         <div class="form-completed">
-          <label for="tel" class="form-lable">телефон</label>
+          <label for="tel" class="form-label">телефон</label>
           <input type="tel" class="form-input" name="tel" id="tel">
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
@@ -476,7 +476,7 @@
         </div>
 
         <div class="form-completed">
-          <label for="mail" class="form-lable">почта</label>
+          <label for="mail" class="form-label">почта</label>
           <input type="mail" class="form-input" name="mail" id="tel">
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
@@ -487,15 +487,15 @@
 
 
         <div class="form-completed">
-          <label for="comment" class="form-lable">коментарий</label>
+          <label for="comment" class="form-label">коментарий</label>
           <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
         </div>
 
         <div class="form-allow">
           <input class="checkbox" type="checkbox" name="allow" id="allow">
-          <lable class="checkbox-lable" for="allow">Соглашаюсь с рассылкой и принимаю
-            <a class="form-link" href="#" target="_blank" rel="noopener noreferrer">Условия договора</a>
-          </lable>
+          <label class="checkbox-label" for="allow">cоглашаюсь с рассылкой и принимаю
+            <a class="form-link" href="#" target="_blank" rel="noopener noreferrer">условия договора</a>
+          </label>
         </div>
         <button class="button-head">отправить</button>
 
