--- a/index.html
+++ b/index.html
@@ -444,10 +444,10 @@
         </div>
       </section>
     </footer>
-    <div class="backdrope">
-    <!--class modal-window--> 
-      <div class="modal-window">
-        <button class="button-close">
+    <div class="backdrope is-hidden" data-modal>
+      <!-class modal-window-->
+      <form class="modal">
+        <button class="button-close" data-modal-close>
           <svg class="img-close" width="18" height="18">
             <use href="./imeges/spryte2.svg#icon-close-black-18dp-2-1" viewBox="0 0 32 32">
             </use>">
@@ -461,48 +461,35 @@
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
               <use href="./imeges/spryte2.svg#icon-person-black-18dp-1" viewBox="0 0 32 32"></use>
-            </svg>
-          </div>
+            </svg>            </div>
         </div>
-
         <div class="form-completed">
           <label for="tel" class="form-label">телефон</label>
           <input type="tel" class="form-input" name="tel" id="tel">
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
               <use href="./imeges/spryte2.svg#icon-phone-black-18dp-1" viewBox="0 0 32 32"></use>
-            </svg>
-          </div>
+            </svg>            </div>
         </div>
-
         <div class="form-completed">
           <label for="mail" class="form-label">почта</label>
           <input type="mail" class="form-input" name="mail" id="tel">
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
               <use href="./imeges/spryte2.svg#icon-email-black-18dp-1" viewBox="0 0 32 32"></use>
-            </svg>
-          </div>
-        </div>
-
-
+            </svg>            </div>          </div>
         <div class="form-completed">
-          <label for="comment" class="form-label">коментарий</label>
-          <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
+          <label for="comment" class="form-label">коментарий</label>            <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
         </div>
-
         <div class="form-allow">
           <input class="checkbox" type="checkbox" name="allow" id="allow">
-          <label class="checkbox-label" for="allow">cоглашаюсь с рассылкой и принимаю
-            <a class="form-link" href="#" target="_blank" rel="noopener noreferrer">условия договора</a>
+          <label class="checkbox-label" for="allow">cоглашаюсь с рассылкой и принимаю 
+            <a class="form-link" href="#" target="_blank" rel="noopener noreferrer">Условия договора</a>
           </label>
         </div>
         <button class="button-head">отправить</button>
-
-
-      </div>
-
+      </form>  
     </div>
-
+    <script src="./js/modal.js"></script>
   </body>                
 </html>
