--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
           <a class="logo">
             <span class="logo-web">Web</span>Studio
           </a>
-          <ul class ="list site-nav menu-list">
-            <li class="menu-item" ><a href="./index.html" class="nav-link current">Студия</a></li>
-            <li class="menu-item"><a href="./portfolio.html" class="site-nav">Портфолио</a></li>
-            <li class="menu-item"><a href="#" class="site-nav" >Контакты</a></li>
+          <ul class ="list site-nav ">
+            <li class="menu-item" ><a href="./index.html" class="link current">Студия</a></li>
+            <li class="menu-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="menu-item"><a href="#" class="link">Контакты</a></li>
           </ul>
         </nav>
         <address>
-          <ul class="list menu-list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="mail-link">
-                <svg class="icon-envelop icon-header">
+          <ul class="list address-nav">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="address-link">
+                <svg class="icon-header" width="16" hieght="16">
                   <use href="./imeges/sprite.svg#icon-envelope" viewBox="0 0 32 32">
                   </use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="tel-link">
-                <svg class="icon-phone icon-header">
+            <li class="item">
+              <a href="tel:+380961111111" class="address-link">
+                <svg class="icon-header" width="16" hieght="16">
                   <use href="./imeges/sprite.svg#icon-phone" viewBox="0 0 32 32">
                   </use>
                 </svg>  
@@ -53,7 +53,7 @@
       <section class="hero">
         <div class="overlay">
           <h1 class="section-head">Эффективные решения <br>для вашего бизнеса</h1>
-          <button class="button-head">Заказать услугу</button>
+          <button class="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       
@@ -393,47 +393,46 @@
             </address>
           </div>
           <div>
-            <div class="footer-header">Присоединяйтесь</div>
-            <ul class="list social-list ">
-              <li class="item-social">
-                <a href="#" aria-label="ссылка instagram" class="social-networks img-footer">
-                  <svg class="icon-social" whidh="20" height="20">
-                    <use href="./imeges/sprite.svg#icon-insta" viewBox="0 0 32 32">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="item-social">
-                <a href="#" aria-label="ссылка Twitter" class="social-networks img-footer">
-                  <svg class="icon-social" whidh="20" height="20">
-                    <use href="./imeges/sprite.svg#icon-twitter" viewBox="0 0 32 32">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="item-social">
-                <a href="#" aria-label="ссылка Facebook" class="social-networks img-footer">
-                  <svg class="icon-social" whidh="20" height="20">
-                    <use href="./imeges/sprite.svg#icon-facebook" viewBox="0 0 32 32">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="item-social">
-                <a href="#" aria-label="ссылка linkedin " class="social-networks img-footer">
-                  <svg class="icon-social" whidh="20" height="20">
-                    <use href="./imeges/sprite.svg#icon-linkedin" viewBox="0 0 32 32">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div>            
+              <div class="footer-header">Присоединяйтесь</div>
+              <ul class="list social-list ">
+                <li class="item-social">
+                  <a href="#" aria-label="ссылка instagram" class="social-networks img-footer">
+                    <svg class="icon-social" whidh="20" height="20">
+                      <use href="./imeges/sprite.svg#icon-insta" viewBox="0 0 32 32">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-social">
+                  <a href="#" aria-label="ссылка Twitter" class="social-networks img-footer">
+                    <svg class="icon-social" whidh="20" height="20">
+                      <use href="./imeges/sprite.svg#icon-twitter" viewBox="0 0 32 32">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-social">
+                  <a href="#" aria-label="ссылка Facebook" class="social-networks img-footer">
+                    <svg class="icon-social" whidh="20" height="20">
+                      <use href="./imeges/sprite.svg#icon-facebook" viewBox="0 0 32 32">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-social">
+                  <a href="#" aria-label="ссылка linkedin " class="social-networks img-footer">
+                    <svg class="icon-social" whidh="20" height="20">
+                      <use href="./imeges/sprite.svg#icon-linkedin" viewBox="0 0 32 32">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>          
             <form>
               <div class="footer-header">подпишитесь на рассылку</div>
               <input type="text" class="footer-input" name="mail-sent" placeholder="E-mail">
-              <a href="" class="button-head">подписаться
+              <a href="" class="button">подписаться
                 <svg class="img-sent" width="24" height="24">
                   <use href="./imeges/symbol-defs.svg#icon-icon-send" viewBox="0 0 32 32">                
                   </use>
@@ -441,11 +440,11 @@
               </a> 
             </form>            
           </div>
-        </div>
+        </div>  
       </section>
     </footer>
     <div class="backdrope is-hidden" data-modal>
-      <!-class modal-window-->
+      <!--modal-window-->
       <form class="modal">
         <button class="button-close" data-modal-close>
           <svg class="img-close" width="18" height="18">
@@ -487,7 +486,7 @@
             <a class="form-link" href="#" target="_blank" rel="noopener noreferrer">Условия договора</a>
           </label>
         </div>
-        <button class="button-head">отправить</button>
+        <button class="button sent">отправить</button>
       </form>  
     </div>
     <script src="./js/modal.js"></script>
