--- a/portfolio.html
+++ b/portfolio.html
@@ -19,30 +19,26 @@
           <a class="logo">
             <span class="logo-web">Web</span>Studio
           </a>
-          <ul class="list site-nav menu-list">
-            <li class="menu-item"><a href="./index.html" class="site-nav">Студия
-            </a>
-            </li>
-            <li class="menu-item"><a href="./portfolio.html" class="nav-link current">Портфолио</a>
-            </li>
-            <li class="menu-item"><a href="#" class="site-nav">Контакты</a>
-            </li>
+          <ul class="list site-nav ">
+            <li class="menu-item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="menu-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="menu-item"><a href="#" class="link">Контакты</a></li>
           </ul>
         </nav>
         <address>
-          <ul class="list menu-list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="mail-link">
-                <svg class="icon-envelop icon-header">
+          <ul class="list address-nav">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="address-link">
+                <svg class="icon-header" width="16" hieght="16">
                   <use href="./imeges/sprite.svg#icon-envelope" viewBox="0 0 32 32">
                   </use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="tel-link">
-                <svg class="icon-phone icon-header">
+            <li class="item">
+              <a href="tel:+380961111111" class="address-link">
+                <svg class="icon-header" width="16" hieght="16">
                   <use href="./imeges/sprite.svg#icon-phone" viewBox="0 0 32 32">
                   </use>
                 </svg>
@@ -53,6 +49,7 @@
         </address>
       </div>
     </header>
+    <main>
     <!--Портфолио-->
     <main>
       <section class="section">
@@ -81,7 +78,7 @@
         <section class='container'>
           <ul class="list card-item">
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="work-list-img">
                   <img src="./imeges/portfolio/img8.jpg" width="370" alt="сайт" />
                   <p class="card-hover">
@@ -97,7 +94,7 @@
               </a>
             </li>
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="work-list-img">
                   <img src="./imeges/portfolio/img.jpg" width="370" alt="баскетбол" />
                     <p class="card-hover">
@@ -113,7 +110,7 @@
               </a>
             </li>
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="work-list-img">
                   <img src="./imeges/portfolio/img-1.jpg" width="370" alt="работа-1" />
                   <p class="card-hover">
@@ -129,7 +126,7 @@
               </a>
             </li>
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="work-list-img">
                   <img src="./imeges/portfolio/img-2.jpg" width="370" alt="работа-2" />
                   <p class="card-hover">
@@ -145,7 +142,7 @@
             </a>
             </li>
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="work-list-img">
                   <img src="./imeges/portfolio/img-3.jpg" width="370" alt="работа-3" />
                   <p class="card-hover">
@@ -161,7 +158,7 @@
               </a>
             </li>
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="work-list-img">
                   <img src="./imeges/portfolio/img-4.jpg" width="370" alt="работа-4" />
                   <p class="card-hover">
@@ -177,7 +174,7 @@
               </a>
             </li>
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="work-list-img">
                   <img src="./imeges/portfolio/img-5.jpg" width="370" alt="работа-5" />
                   <p class="card-hover">
@@ -193,7 +190,7 @@
               </a>
             </li>
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                <div class="work-list-img">
                   <img src="./imeges/portfolio/img-6.jpg" width="370" alt="работа-6" />
                  <p class="card-hover">
@@ -209,7 +206,7 @@
               </a>
             </li>
             <li class="element">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="work-list-img">
                   <img src="./imeges/portfolio/img-7.jpg" width="370" alt="работа-7" />
                   <p class="card-hover">
@@ -292,10 +289,16 @@
               </li>
             </ul>
           </div>
-          <div>
-            <div class="footer-header">подпишитесь на рассылку</div>
-            <a href="" class="button-head">подписаться</a>
-          </div>
+            <form>
+              <div class="footer-header">подпишитесь на рассылку</div>
+              <input type="text" class="footer-input" name="mail-sent" placeholder="E-mail">
+              <a href="" class="button">подписаться
+                <svg class="img-sent" width="24" height="24">
+                  <use href="./imeges/symbol-defs.svg#icon-icon-send" viewBox="0 0 32 32">
+                  </use>
+                </svg>
+              </a>
+            </form>
         </div>
       </section>
     </footer>
