--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li class="item">
               <a href="tel:+380961111111" class="address-link">
                 <svg class="icon-header" width="16" hieght="16">
-                  <use href="./imeges/sprite.svg#icon-phone" viewBox="0 0 32 32">
+                  <use href="./imeges/sprite3.svg#icon-Phone" viewBox="0 0 32 32">
                   </use>
                 </svg>  
                   +38 096 111 11 11
@@ -64,7 +64,7 @@
             <li class="content-box">
               <div class="background-icon">
                 <svg class="icon">
-                  <use href="./imeges/sprite.svg#icon-plate" viewBox="0 0 32 32">
+                  <use href="./imeges/sprite3.svg#icon-plate" viewBox="0 0 32 32">
                   </use>
                 </svg>
               </div>
@@ -78,7 +78,7 @@
             <li class="content-box">
               <div class="background-icon">
                 <svg class="icon">
-                  <use href="./imeges/sprite.svg#icon-watch" viewBox="0 0 32 32">
+                  <use href="./imeges/sprite3.svg#icon-watch" viewBox="0 0 32 32">
                   </use>
                 </svg>
               </div>
@@ -92,7 +92,7 @@
             <li class="content-box" >
               <div class="background-icon">
                  <svg class="icon">
-                   <use href="./imeges/sprite.svg#icon-comp" viewBox="0 0 32 32">
+                   <use href="./imeges/sprite3.svg#icon-comp" viewBox="0 0 32 32">
                    </use>
                  </svg>
               </div>
@@ -106,7 +106,7 @@
             <li class="content-box">
               <div class="background-icon">
                 <svg class="icon">
-                  <use href="./imeges/symbol-defs.svg#icon-man" viewBox="0 0 32 32">
+                  <use href="./imeges/sprite3.svg#icon-man" viewBox="0 0 32 32">
                   </use>
                 </svg>
               </div>
