--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
       <form class="modal">
         <button class="button-close" data-modal-close>
           <svg class="img-close" width="18" height="18">
-            <use href="./imeges/spryte2.svg#icon-close-black-18dp-2-1" viewBox="0 0 32 32">
+            <use href="./imeges/sprite3.svg#icon-close-black-18dp-2-1" viewBox="0 0 32 32">
             </use>">
           </svg>
         </button>
