--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           <input type="text" class="form-input" name="name" id="name">
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
-              <use href="./imeges/spryte2.svg#icon-person-black-18dp-1" viewBox="0 0 32 32"></use>
+              <use href="./imeges/sprite3.svg#icon-person-black-18dp-1" viewBox="0 0 32 32"></use>
             </svg>            </div>
         </div>
         <div class="form-completed">
@@ -467,7 +467,7 @@
           <input type="tel" class="form-input" name="tel" id="tel">
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
-              <use href="./imeges/spryte2.svg#icon-phone-black-18dp-1" viewBox="0 0 32 32"></use>
+              <use href="./imeges/sprite3.svg#icon-phone-black-18dp-1" viewBox="0 0 32 32"></use>
             </svg>            </div>
         </div>
         <div class="form-completed">
@@ -475,7 +475,7 @@
           <input type="mail" class="form-input" name="mail" id="tel">
           <div class="img-form">
             <svg class="img-color" width="18" height="18">
-              <use href="./imeges/spryte2.svg#icon-email-black-18dp-1" viewBox="0 0 32 32"></use>
+              <use href="./imeges/sprite3.svg#icon-email-black-18dp-1" viewBox="0 0 32 32"></use>
             </svg>            </div>          </div>
         <div class="form-completed">
           <label for="comment" class="form-label">коментарий</label>            <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
