--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,8 @@
       <div class="container main-nav">
         <nav class="navigation">
           <a class="logo">
-            <span class="logo-web">Web</span>Studio
+            <span class="logo-web">Web</span>
+            <span class="logo-studio">Studio</span>
           </a>
           <ul class="list site-nav ">
             <li class="menu-item"><a href="./index.html" class="link">Студия</a></li>
@@ -29,7 +30,7 @@
           <ul class="list address-nav">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="address-link">
-                <svg class="icon-header" width="16" hieght="16">
+                <svg class="icon-header" width="16" height="16">
                   <use href="./imeges/sprite.svg#icon-envelope" viewBox="0 0 32 32">
                   </use>
                 </svg>
@@ -38,7 +39,7 @@
             </li>
             <li class="item">
               <a href="tel:+380961111111" class="address-link">
-                <svg class="icon-header" width="16" hieght="16">
+                <svg class="icon-header" width="16" height="16">
                   <use href="./imeges/sprite.svg#icon-phone" viewBox="0 0 32 32">
                   </use>
                 </svg>
@@ -230,7 +231,8 @@
         <div class="container footer">
           <div>
             <a class="logo footer">
-              <span class="logo-web">Web</span>Studio
+              <span class="logo-web">Web</span>
+              <span>Studio</span>
             </a>
             <address class="footer-adress">
               <ul class="list">
@@ -257,7 +259,7 @@
             <ul class="list social-list ">
               <li class="item-social">
                 <a href="#" aria-label="ссылка instagram" class="social-networks img-footer">
-                  <svg class="icon-social" whidh="20" height="20">
+                  <svg class="icon-social" width="20" height="20">
                     <use href="./imeges/sprite.svg#icon-insta" viewBox="0 0 32 32">
                     </use>
                   </svg>
@@ -265,7 +267,7 @@
               </li>
               <li class="item-social">
                 <a href="#" aria-label="ссылка Twitter" class="social-networks img-footer">
-                  <svg class="icon-social" whidh="20" height="20">
+                  <svg class="icon-social" width="20" height="20">
                     <use href="./imeges/sprite.svg#icon-twitter" viewBox="0 0 32 32">
                     </use>
                   </svg>
@@ -273,7 +275,7 @@
               </li>
               <li class="item-social">
                 <a href="#" aria-label="ссылка Facebook" class="social-networks img-footer">
-                  <svg class="icon-social" whidh="20" height="20">
+                  <svg class="icon-social" width="20" height="20">
                     <use href="./imeges/sprite.svg#icon-facebook" viewBox="0 0 32 32">
                     </use>
                   </svg>
@@ -281,7 +283,7 @@
               </li>
               <li class="item-social">
                 <a href="#" aria-label="ссылка linkedin " class="social-networks img-footer">
-                  <svg class="icon-social" whidh="20" height="20">
+                  <svg class="icon-social" width="20" height="20">
                     <use href="./imeges/sprite.svg#icon-linkedin" viewBox="0 0 32 32">
                     </use>
                   </svg>
@@ -294,7 +296,7 @@
               <input type="text" class="footer-input" name="mail-sent" placeholder="E-mail">
               <a href="" class="button">подписаться
                 <svg class="img-sent" width="24" height="24">
-                  <use href="./imeges/symbol-defs.svg#icon-icon-send" viewBox="0 0 32 32">
+                  <use href="./imeges/sprite3.svg#icon-icon-send" viewBox="0 0 32 32">
                   </use>
                 </svg>
               </a>
