--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <div class="container main-nav">
         <nav class="navigation">
           <a class="logo">
-            <span class="logo-web">Web</span>Studio
+            <span class="logo-web">Web</span>
+            <span class="logo-studio">Studio</span>
           </a>
           <ul class ="list site-nav ">
             <li class="menu-item" ><a href="./index.html" class="link current">Студия</a></li>
@@ -28,7 +29,7 @@
           <ul class="list address-nav">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="address-link">
-                <svg class="icon-header" width="16" hieght="16">
+                <svg class="icon-header" width="16" height="16">
                   <use href="./imeges/sprite.svg#icon-envelope" viewBox="0 0 32 32">
                   </use>
                 </svg>
@@ -37,7 +38,7 @@
             </li>
             <li class="item">
               <a href="tel:+380961111111" class="address-link">
-                <svg class="icon-header" width="16" hieght="16">
+                <svg class="icon-header" width="16" height="16">
                   <use href="./imeges/sprite3.svg#icon-Phone" viewBox="0 0 32 32">
                   </use>
                 </svg>  
@@ -370,7 +371,8 @@
         <div class="container footer">
           <div>
             <a class="logo footer">
-              <span class="logo-web">Web</span>Studio
+              <span class="logo-web">Web</span>
+              <span>Studio</span>
             </a>
             <address class="footer-adress">
               <ul class="list">
@@ -434,7 +436,7 @@
               <input type="text" class="footer-input" name="mail-sent" placeholder="E-mail">
               <a href="" class="button">подписаться
                 <svg class="img-sent" width="24" height="24">
-                  <use href="./imeges/symbol-defs.svg#icon-icon-send" viewBox="0 0 32 32">                
+                  <use href="./imeges/sprite3.svg#icon-icon-send" viewBox="0 0 32 32">                
                   </use>
                 </svg>
               </a> 
